example/statefulset/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stateful-app
  labels:
    istio-injection: enabled
