example/statefulset/02-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-app
  namespace: stateful-app
  labels:
    app: stateful-app
spec:
  serviceName: stateful-app
  replicas: 1
  selector:
    matchLabels:
      app: stateful-app
  template:
    metadata:
      labels:
        app: stateful-app
    spec:
      containers:
        - name: stateful-app
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
